--- a/styles.css
+++ b/styles.css
@@ -354,3 +354,9 @@ footer a {
 #login_top {
   margin-top: 150px;
 }
+
+
+/* Responsive for desktop */
+@media screen and (min-width: 600px) {
+  
+}
