--- a/styles.css
+++ b/styles.css
@@ -392,6 +392,14 @@ footer a {
     width: 100vw;
   }
 
+  #header_logo {
+    margin-left: calc(100vw / 4);
+  }
+
+  #profile_icon {
+    margin-right: calc(100vw / 4);
+  }
+
   /* Home */
   #daily_Quest_1 {
     margin: 100px 0px 50px 0px;
