--- a/views/impressum.html
+++ b/views/impressum.html
@@ -50,9 +50,9 @@
         <img id="profile_icon" src="../img/graphics/profile.png" alt="Profile Icon"></a>
 
 </header>
-<div id="impressum_container">
-    <h2>TEst</h2>
-<p><b>Impressum</b><br/><br/><b>Verantwortliche Instanz:</b><br/>OneQuest GmbH<br/>Queststrasse 69<br/>Weed 420<br/>Schweiz
+<div class="impressum_container">
+    <h1 class="text_title">Impressum</h1>
+<p><b>Verantwortliche Instanz:</b><br/>OneQuest GmbH<br/>Queststrasse 69<br/>Weed 420<br/>Schweiz
     <br/><strong>E-Mail</strong>: quest@onequest.ch<br/><br/><strong>Vertretungsberechtigte Personen
     </strong><br/>Max Muster<br/><br/><strong>Name des Unternehmens</strong>: OneQuest GmbH<br/><strong>
     Registrationsnummer</strong>: CHE-111.111.111<br/><strong>Umsatzsteuer-Identifikationsnummer</strong>: 
