--- a/styles.css
+++ b/styles.css
@@ -148,7 +148,7 @@ footer a {
   text-decoration: none;
 }
 
-/* Home */
+/* Home --------------------------------------------------------------------------------------------------------------- */
 #quest_box {
   margin-left: calc(100vw / 4);
   margin-right: calc(100vw / 4);
