--- a/styles.css
+++ b/styles.css
@@ -194,7 +194,7 @@ footer a {
   margin: 50px 0px 50px 0px;
 }
 
-/* Register */
+/* Register ------------------------------------------------------------------------------------------------------------- */
 
 #register_input {
   display: flex;
