--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,7 @@ p {
   margin-bottom: 20px;
 }
 
-/* Header */
+/* Header ------------------------------------------------------------------------------------------------------------- */
 header {
   flex-shrink: 0;
   height: 65px;
