--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ a {
   color: var(--accent, yellow);
 }
 
-/* Headings */
+/* Headings ----------------------------------------------------------------------------------------------------------- */
 h1 {
   text-align: center;
   font-family: 'Urbanist', sans-serif;
