--- a/styles.css
+++ b/styles.css
@@ -360,7 +360,7 @@ footer a {
 }
 
 
-/* Impressum Text */
+/* Impressum Text ----------------------------------------------------------------------------------------------------- */
 
 #impressum_container {
   display: flex;
