update fn registerUser

--- a/views/register.html
+++ b/views/register.html
@@ -61,7 +61,7 @@
             <input type="password" id="registerPassword" placeholder="Passwort" required>
         </div>
 
-        <button class="login_buttonS" id="registerButton" onclick="registerUser()">Registrieren</button>
+        <button class="login_buttonS" id="registerButton">Registrieren</button>
 
     </div>
 
