--- a/styles.css
+++ b/styles.css
@@ -384,6 +384,12 @@ footer a {
   margin-bottom: 20px;
 }
 
+/* Regeln Text */
+
+
+
+
+
 /* Responsive for desktop --------------------------------------------------------------------------------------------- */
 @media screen and (min-width: 1000px) {
 
