--- a/views/rules.html
+++ b/views/rules.html
@@ -52,17 +52,17 @@
 </header>
 <div class="rules">
     <h1 class="text_title">Regeln</h1>
-    <li>Respekt und H&ouml;flichkeit: Jeder Nutzer sollte sich respektvoll und h&ouml;flich gegen&uuml;ber anderen verhalten. Hassreden, Beleidigungen oder Mobbing sind nicht akzeptabel.</li>
+    <p>Respekt und H&ouml;flichkeit: Jeder Nutzer sollte sich respektvoll und h&ouml;flich gegen&uuml;ber anderen verhalten. Hassreden, Beleidigungen oder Mobbing sind nicht akzeptabel.</p>
 
-    <li>Datenschutz: Pers&ouml;nliche Daten von Nutzern d&uuml;rfen nicht ohne deren Zustimmung weitergegeben oder missbraucht werden. Die Privatsph&auml;re jedes Einzelnen ist zu respektieren.</li>
+    <p>Datenschutz: Pers&ouml;nliche Daten von Nutzern d&uuml;rfen nicht ohne deren Zustimmung weitergegeben oder missbraucht werden. Die Privatsph&auml;re jedes Einzelnen ist zu respektieren.</p>
     
-    <li>Ehrlichkeit und Authentizit&auml;t: Das Vort&auml;uschen falscher Tatsachen, das Erstellen von Fake-Profilen oder irref&uuml;hrende Angaben sind untersagt.</li>
+    <p>Ehrlichkeit und Authentizit&auml;t: Das Vort&auml;uschen falscher Tatsachen, das Erstellen von Fake-Profilen oder irref&uuml;hrende Angaben sind untersagt.</p>
     
-    <li>Keine unlautere Werbung: Spam, Werbung oder irref&uuml;hrende Informationen sind nicht gestattet.</li>
+    <p>Keine unlautere Werbung: Spam, Werbung oder irref&uuml;hrende Informationen sind nicht gestattet.</p>
     
-    <li>Verbot von gef&auml;hrlichen Inhalten: Inhalte, die Gewalt, Selbstverletzung oder gef&auml;hrliche Handlungen f&ouml;rdern oder verherrlichen, sind nicht gestattet.</li>
+    <p>Verbot von gef&auml;hrlichen Inhalten: Inhalte, die Gewalt, Selbstverletzung oder gef&auml;hrliche Handlungen f&ouml;rdern oder verherrlichen, sind nicht gestattet.</p>
     
-    <li>Schutz von Minderj&auml;hrigen: Kinder und Jugendliche sind auf der Plattform zu sch&uuml;tzen.</li>
+    <p>Schutz von Minderj&auml;hrigen: Kinder und Jugendliche sind auf der Plattform zu sch&uuml;tzen.</p>
 </div>
 
 <footer>
