--- a/views/rules.html
+++ b/views/rules.html
@@ -45,7 +45,7 @@
     
 
 <header>
-    <a href="#"><img id="header_logo" src="../img/graphics/LogoOQ4.png" alt="Header Logo OQ"></a>
+    <a href="../index.html"><img id="header_logo" src="../img/graphics/LogoOQ4.png" alt="Header Logo OQ"></a>
     <a href="../views/profile.html">
         <img id="profile_icon" src="../img/graphics/profile.png" alt="Profile Icon"></a>
 
