change buttons to inputs

--- a/views/login.html
+++ b/views/login.html
@@ -50,21 +50,22 @@
 <body>
     <h1 id="login_top">Login</h1>
 
-<div class="button-container">
+    <div class="button-container">
 
-<div id="login_input">
-    <button class="login_button">Username</button>
-    <button class="login_button">Password</button>
-</div>
+        <div id="login_input">
+            <input id="loginUsername" class="login_button" placeholder="Benutzername">
+            <input id="loginPassword" class="login_button" placeholder="Passwort">
+        </div>
 
-<button class="login_buttonS">Login</button>
-</div>
-<a href="../views/register.html">Noch kein Konto?</a>
+        <button class="login_buttonS">Login</button>
+    </div>
+    <a href="../views/register.html">Noch kein Konto?</a>
 
-<footer>
-    <a href="../views/impressum.html" target="_blank">Impressum</a>
-    <a href="../views/rules.html" target="_blank">Regeln & Rechtliches</a>
-    <a href="../views/about.html" target="_blank">About</a>
-</footer>
+    <footer>
+        <a href="../views/impressum.html" target="_blank">Impressum</a>
+        <a href="../views/rules.html" target="_blank">Regeln & Rechtliches</a>
+        <a href="../views/about.html" target="_blank">About</a>
+    </footer>
 </body>
+
 </html>
