--- a/views/login.html
+++ b/views/login.html
@@ -66,6 +66,13 @@
         <a href="../views/rules.html" target="_blank">Regeln & Rechtliches</a>
         <a href="../views/about.html" target="_blank">About</a>
     </footer>
+
+    <!-- Import supabase -->
+    <script type='module' src=" ../00_setup/supabase.js"></script>
+    <script type="module" src="../01_api/supabase_api.js"></script>
+    <script src="../mainUser.js" type="module"></script>
+    <script type="module" src="../03_scripts/register.js"></script>
+
 </body>
 
 </html>
