--- a/views/login.html
+++ b/views/login.html
@@ -71,7 +71,7 @@
     <script type='module' src=" ../00_setup/supabase.js"></script>
     <script type="module" src="../01_api/supabase_api.js"></script>
     <script src="../mainUser.js" type="module"></script>
-    <script type="module" src="../03_scripts/register.js"></script>
+    <script type="module" src="../03_scripts/login.js"></script>
 
 </body>
 
