--- a/views/login.html
+++ b/views/login.html
@@ -53,8 +53,8 @@
     <div class="button-container">
 
         <div id="login_input">
-            <input id="loginUsername" class="login_button" type="email" placeholder="Benutzername">
-            <input id="loginPassword" class="login_button" type="password" placeholder="Passwort">
+            <input id="loginEmail" class="login_button" type="email" placeholder="Email" required>
+            <input id="loginPassword" class="login_button" type="password" placeholder="Passwort" required>
         </div>
 
         <button id="loginButton" class="login_buttonS">Login</button>
