--- a/views/profile.html
+++ b/views/profile.html
@@ -48,7 +48,7 @@
     </header>
 
     <main>
-        <div id="profile_picture"><img src="../img/graphics/profile.png" alt="Profilbild"></div>
+        <div id="profile_picture"><img id="profile_picture_url" src="../img/graphics/profile.png" alt="Profilbild"></div>
         <h1 id="profile_username">User</h1>
         <div id="profile_questpoints">
             <p>Du hast schon</p>
