debugging quest button

--- a/styles.css
+++ b/styles.css
@@ -189,6 +189,10 @@ footer a {
   border-radius: 8px;
 }
 
+#congrats {
+  display: none;
+}
+
 
 /* Register ------------------------------------------------------------------------------------------------------------- */
 #register_input {
