disable autocomplete for inputs

--- a/views/editProfile.html
+++ b/views/editProfile.html
@@ -52,8 +52,8 @@
         <!-- TODO: @y-neck Add functionality to retrieve or update profile picture -->
         <div id="editProfile_inputs">
             <!-- TODO: @y-neck Add functionality to retrieve or update Username/pw -->
-            <input type="text" id="editUsername" placeholder="Benutzername">
-            <input type="password" id="editPassword" placeholder="Neues Passwort">
+            <input type="text" id="editUsername" placeholder="Neuer Benutzername" autocomplete="off">
+            <input type="password" id="editPassword" placeholder="Neues Passwort" autocomplete="off">
             <button id="deleteProfile">Profil löschen</button>
         </div>
 
