Update confirmChanges button

--- a/views/editProfile.html
+++ b/views/editProfile.html
@@ -42,8 +42,7 @@
 
 <body>
     <header id="profile_header">
-        <a id="profile_confirmChanges" class="profile_headerIcon" href="../views/profile.html"><i
-                class="fa-solid fa-check"></i></a>
+        <div class="profile_headerIcon"><i id="profile_confirmChanges" class="fa-solid fa-check"></i></div>
 
     </header>
 
