fn updateUser, does not work yet

--- a/views/editProfile.html
+++ b/views/editProfile.html
@@ -42,7 +42,7 @@
 
 <body>
     <header id="profile_header">
-        <div class="profile_headerIcon"><i id="profile_confirmChanges" class="fa-solid fa-check"></i></div>
+        <a href="../views/profile.html" id="profile_confirmChanges" class="profile_headerIcon"><i class="fa-solid fa-check"></i></a>
 
     </header>
 
