fn updateUser password works

--- a/views/editProfile.html
+++ b/views/editProfile.html
@@ -42,7 +42,7 @@
 
 <body>
     <header id="profile_header">
-        <a href="../views/profile.html" id="profile_confirmChanges" class="profile_headerIcon"><i class="fa-solid fa-check"></i></a>
+        <button id="profile_confirmChanges" class="profile_headerIcon"><i class="fa-solid fa-check"></i></button>
 
     </header>
 
@@ -70,6 +70,7 @@
     <script type='module' src=" ../00_setup/supabase.js"></script>
     <script type="module" src="../01_api/supabase_api.js"></script>
     <script src="../mainUser.js" type="module"></script>
+    <script type="module" src="../03_scripts/editProfile.js"></script>
 </body>
 
 </html>
