--- a/views/editProfile.html
+++ b/views/editProfile.html
@@ -42,7 +42,7 @@
 
 <body>
     <header id="profile_header">
-        <button id="profile_confirmChanges" class="profile_headerIcon"><i class="fa-solid fa-check"></i></button>
+        <button id="editProfile_confirmChanges" class="profile_headerIcon"><i class="fa-solid fa-check"></i></button>
 
     </header>
 
