--- a/views/profile.html
+++ b/views/profile.html
@@ -56,15 +56,15 @@
             <p>Quests geschafft!</p>
         </div>
         <div id="profile_gallery">
-            <img src="" alt="img1">
-            <img src="" alt="img2">
-            <img src="" alt="img3">
-            <img src="" alt="img4">
-            <img src="" alt="img5">
-            <img src="" alt="img6">
-            <img src="" alt="img7">
-            <img src="" alt="img8">
-            <img src="" alt="img9">
+            <img src="" alt="Zukünftige Quests">
+            <img src="" alt="Zukünftige Quests">
+            <img src="" alt="Zukünftige Quests">
+            <img src="" alt="Zukünftige Quests">
+            <img src="" alt="Zukünftige Quests">
+            <img src="" alt="Zukünftige Quests">
+            <img src="" alt="Zukünftige Quests">
+            <img src="" alt="Zukünftige Quests">
+            <img src="" alt="Zukünftige Quests">
         </div>
 
     </main>
