--- a/views/profile.html
+++ b/views/profile.html
@@ -56,15 +56,15 @@
             <p>Quests geschafft!</p>
         </div>
         <div id="profile_gallery">
-            <img src="" alt="Zukünftige Quests">
-            <img src="" alt="Zukünftige Quests">
-            <img src="" alt="Zukünftige Quests">
-            <img src="" alt="Zukünftige Quests">
-            <img src="" alt="Zukünftige Quests">
-            <img src="" alt="Zukünftige Quests">
-            <img src="" alt="Zukünftige Quests">
-            <img src="" alt="Zukünftige Quests">
-            <img src="" alt="Zukünftige Quests">
+            <img class="profile_gallery_img" src="" alt="Zukünftige Quests">
+            <img class="profile_gallery_img" src="" alt="Zukünftige Quests">
+            <img class="profile_gallery_img" src="" alt="Zukünftige Quests">
+            <img class="profile_gallery_img" src="" alt="Zukünftige Quests">
+            <img class="profile_gallery_img" src="" alt="Zukünftige Quests">
+            <img class="profile_gallery_img" src="" alt="Zukünftige Quests">
+            <img class="profile_gallery_img" src="" alt="Zukünftige Quests">
+            <img class="profile_gallery_img" src="" alt="Zukünftige Quests">
+            <img class="profile_gallery_img" src="" alt="Zukünftige Quests">
         </div>
 
     </main>
