--- a/views/login.html
+++ b/views/login.html
@@ -58,11 +58,12 @@
     </div>
     <a href="../views/register.html">Noch kein Konto?</a>
 
-    <footer>
-        <a href="../views/impressum.html" target="_blank">Impressum</a>
-        <a href="../views/rules.html" target="_blank">Regeln & Rechtliches</a>
-        <a href="../views/about.html" target="_blank">About</a>
-    </footer>
+<footer>
+    <a href="../views/impressum.html" target="_blank">Impressum</a>
+    <a href="../views/rules.html" target="_blank">Regeln & Rechtliches</a>
+    <a href="../views/about.html" target="_blank">About</a>
+    <a href="../views/datenschutz.html" target="_blank">Datenschutz</a>
+</footer>
 
     <!-- Import supabase -->
     <script type="module" src=" ../00_setup/supabase.js"></script>
