--- a/views/datenschutz.html
+++ b/views/datenschutz.html
@@ -50,28 +50,14 @@
         <img id="profile_icon" src="../img/graphics/profile.png" alt="Profile Icon"></a>
 
 </header>
-<div class="impressum_container">
-    <h1 class="text_title">Impressum</h1>
-<p><b>Verantwortliche Instanz:</b><br/>OneQuest GmbH<br/>Queststrasse 69<br/>Weed 420<br/>Schweiz
-    <br/><strong>E-Mail</strong>: quest@onequest.ch<br/><br/><strong>Vertretungsberechtigte Personen
-    </strong><br/>Max Muster<br/><br/><strong>Name des Unternehmens</strong>: OneQuest GmbH<br/><strong>
-    Registrationsnummer</strong>: CHE-111.111.111<br/><strong>Umsatzsteuer-Identifikationsnummer</strong>: 
-    CHE-111.111.111 MWST<br/><br/><strong>Haftungsausschluss</strong><br/>Der Autor übernimmt keine Gewähr 
-    für die Richtigkeit, Genauigkeit, Aktualität, Zuverlässigkeit und Vollständigkeit der Informationen.
-    <br/>Haftungsansprüche gegen den Autor wegen Schäden materieller oder immaterieller Art, die aus dem 
-    Zugriff oder der Nutzung bzw. Nichtnutzung der veröffentlichten Informationen, durch Missbrauch der 
-    Verbindung oder durch technische Störungen entstanden sind, werden ausgeschlossen.<br/><br/>Alle 
-    Angebote sind freibleibend. Der Autor behält es sich ausdrücklich vor, Teile der Seiten oder das 
-    gesamte Angebot ohne gesonderte Ankündigung zu verändern, zu ergänzen, zu löschen oder die 
-    Veröffentlichung zeitweise oder endgültig einzustellen.<br/><br/><strong>Haftungsausschluss für 
-    Inhalte und Links</strong><br/>Verweise und Links auf Webseiten Dritter liegen ausserhalb unseres 
-    Verantwortungsbereichs. Es wird jegliche Verantwortung für solche Webseiten abgelehnt. Der Zugriff 
-    und die Nutzung solcher Webseiten erfolgen auf eigene Gefahr des jeweiligen Nutzers.
-    <br/><br/><strong>Urheberrechtserklärung</strong><br/>Die Urheber- und alle anderen Rechte an 
-    Inhalten, Bildern, Fotos oder anderen Dateien auf dieser Website, gehören ausschliesslich OneQuest 
-    GmbH oder den speziell genannten Rechteinhabern. Für die Reproduktion jeglicher Elemente ist die 
-    schriftliche Zustimmung des Urheberrechtsträgers im Voraus einzuholen.<br/><br/><strong>Quelle
-    </strong>: <a style='color:inherit;text-decoration:none;' rel='nofollow' href='https://brainbox.swiss/'>BrainBox Solutions</a></p>
+<div class="datenschutz">
+    <h1 class="text_title">Datenschutz</h1>
+    <p>Unsere Verarbeitung personenbezogener Daten unserer Nutzer beschränkt sich auf jene Daten, die zur Bereitstellung einer
+    funktionsfähigen Internetseite sowie unserer Inhalte und Leistungen erforderlich sind. Die Verarbeitung
+    personenbezogener Daten unserer Nutzer erfolgt nur zu den unten aufgeführten Zwecken und wenn eine rechtliche Grundlage
+    (im Sinn der DSGVO) vorliegt. Es werden nur solche personenbezogenen Daten erhoben, die für die Durchführung und
+    Abwicklung unserer Aufgaben und Leistungen tatsächlich erforderlich sind oder die du uns freiwillig zur Verfügung
+    gestellt hast.</p>
 </div>
 
 <footer>
