--- a/views/profile.html
+++ b/views/profile.html
@@ -69,11 +69,12 @@
 
     </main>
 
-    <footer>
-        <a href="../views/impressum.html" target="_blank">Impressum</a>
-        <a href="../views/rules.html" target="_blank">Regeln & Rechtliches</a>
-        <a href="../views/about.html" target="_blank">About</a>
-    </footer>
+<footer>
+    <a href="../views/impressum.html" target="_blank">Impressum</a>
+    <a href="../views/rules.html" target="_blank">Regeln & Rechtliches</a>
+    <a href="../views/about.html" target="_blank">About</a>
+    <a href="../views/datenschutz.html" target="_blank">Datenschutz</a>
+</footer>
 
     <!-- Import supabase -->
     <script type="module" src=" ../00_setup/supabase.js"></script>
