--- a/views/rules.html
+++ b/views/rules.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <!--Default character set: https://www.w3schools.com/html/html_charset.asp-->
-    <title></title>
+    <title>Regeln & Rechtliches</title>
     <!--Tab title-->
     <meta name="description" content="">
     <!--Description of web page-->
