--- a/styles.css
+++ b/styles.css
@@ -353,7 +353,7 @@ label{
 }
 
 /* Login page --------------------------------------------------------------------------------------------------------- */
-#button-container {
+.button-container {
   display: flex;
   flex-direction: column;
   margin-bottom: 40px;
