--- a/views/login.html
+++ b/views/login.html
@@ -47,7 +47,7 @@
 
     <h1 id="login_top">Login</h1>
 
-    <div id="button-container">
+    <div class="button-container">
 
         <div id="login_input">
             <label for="loginEmail">Email</label>
